Fix spacing and sizing in sidebar

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,7 +113,7 @@ html {
 
 body {
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 3.5fr;
     grid-template-rows: 1fr 5fr;
     width: 100vw;
     height: 100vh;
@@ -122,11 +122,11 @@ body {
 .sidebar {
     background-color: #15803d;
     color: white;
-    padding-left: 20px;
+    padding-left: 40px;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     font-family: 'Oswald';
-    font-size: 2rem;
+    font-size: 1.7rem;
     font-weight: 400;
     display: grid;
     align-items: start;
@@ -134,7 +134,7 @@ body {
 }
 
 .sidebar img {
-    max-width: 45px;
+    max-width: 40px;
 }
 
 .branding,
@@ -150,13 +150,16 @@ body {
     gap: 20px;
 }
 
+.branding ul {
+    margin-left: -5px;
+}
 .branding a {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     font-weight: 700;
 }
 
 .branding img {
-    max-width: 60px;
+    max-width: 55px;
 }
 
 .sidebar li {
